# lib/api/error/unauthorized_error.rb
@@ -1,0 +1,5 @@
+class Api::Error::UnauthorizedError < Api::Error::BaseError
+  def status
+    :unauthorized
+  end
+end
